# ntzpcbooster-app

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: release.yml
admin/: index.html  package-lock.json  package.json
admin/src/: App.tsx  api.ts  index.css
admin/src/pages/: AffDashboard.tsx  AffSales.tsx  AffWithdraw.tsx  Affiliates.tsx  (+6 more)
landing/: i18n.js  index.html  script.js  style.css  success.html
src/: App.tsx  constants.ts  data.ts  i18n.tsx  icons.ts  index.css  types.ts
src-tauri/: .tauri-updater.key.pub  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ActivationPage.tsx  AppearancePanel.tsx  ConfirmDialog.tsx  HardwarePage.tsx  Hero.tsx  HistoryPage.tsx  OnboardingWizard.tsx  OptList.tsx  PageHints.tsx  SettingsPage.tsx  Sidebar.tsx  StartupPage.tsx  UpdateChecker.tsx  primitives.tsx
src/data/: categories.ts  index.ts  mocks.ts  optimizations.ts
src/hooks/: useAutostart.ts  useConfigIO.ts  useDetectState.ts  useNotify.ts  usePCInfo.ts  useScheduler.ts  useStartupItems.ts  useStorageInfo.ts  useSystemMonitor.ts  useTrayClose.ts
src/lib/: license.ts
src/locales/: en.ts  es.ts  pt.ts
src/tests/: components.test.tsx  data.test.ts  i18n.test.tsx  locales.test.ts  setup.ts  useScheduler.test.ts
supabase/: SETUP.md  config.toml
supabase/migrations/: 001_initial_schema.sql  002_coupons.sql  003_add_anual_plan.sql
(+10 files in other folders)
